Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18740

lustre/mgs/mgs_llog.c doesn't build with gccc 11.5.0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Trivial Trivial
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      # gcc -v
      gcc version 11.5.0 20240719 (Red Hat 11.5.0-2) (GCC) 
      # make
      ...
      In function 'contain_valid_fsname',
          inlined from 'contain_valid_fsname' at /home/alexey/head2/lustre/mgs/mgs_llog.c:4989:13,
          inlined from 'mgs_lcfg_fork_handler' at /home/alexey/head2/lustre/mgs/mgs_llog.c:5027:6:
      /home/alexey/head2/lustre/mgs/mgs_llog.c:4995:13: error: '__builtin_memcmp_eq' specified bound [18446744071562067968, 0] exceeds maximum object size 9223372036854775807 [-Werror=stringop-overread]
       4995 |         if (memcmp(buf, fsname, namelen) != 0)
            |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: